# docuemnt_management_system

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
accounts/: admin.py  urls.py
accounts/management/commands/: define_groups.py
accounts/migrations/: 0001_initial.py  0002_userip.py
accounts/models/: __init__.py  custom_user.py  user_ip.py
accounts/serializers/: __init__.py  custom_user_serializer.py  signup_serializer.py
accounts/tests/: __init__.py  test_views.py
accounts/views/: __init__.py  custom_user_view_set.py  signup_view.py
base_app/permissions/: __init__.py  strict_model_permission.py
blogs/migrations/: 0001_initial.py  0002_blogview.py
blogs/models/: __init__.py  blog.py  blog_view.py
blogs/serializers/: blog_serializer.py
blogs/views/: __init__.py  blog_view_set.py
dms/: asgi.py  settings.py  urls.py  wsgi.py
documents/: admin.py  urls.py
documents/migrations/: 0001_initial.py
documents/models/: document.py
documents/serializers/: __init__.py  document_serializer.py
documents/views/: __init__.py  document_view_set.py
